tests/rpm-pkgs/util-linux-2.37.2-1.fc35/output-exp@symbiotic/scan-results.err
Error: COMPILER_WARNING (CWE-563):
util-linux-2.37.2/misc-utils/hardlink.c:529:8: warning[-Wunused-but-set-variable]: variable 'off' set but not used
#        off_t off = 0;          /* current offset */
#              ^
#  527|   	char buf_b[8192];
#  528|   	int cmp = 0;		/* zero => equal */
#  529|-> 	off_t off = 0;		/* current offset */
#  530|   
#  531|   	assert(a->links != NULL);
